--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tirumala TVS | Performance Dealer</title>
+    <title>Tirumala TVS | Authorized Dealer</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="action-bar">
             <a href="#contact" class="action-item"><span class="icon">📅</span><span>Book Service</span></a>
-            <a href="#contact" class="action-item"><span class="icon">🏍️</span><span>Book Test Ride</span></a>
+            <a href="#contact" class="action-item"><span class="icon">🏍️</span><span>Test Ride</span></a>
             <a href="https://wa.me/919964946512" class="action-item"><span class="icon">💬</span><span>WhatsApp</span></a>
             <a href="tel:+919964946512" class="action-item"><span class="icon">📞</span><span>Call Now</span></a>
         </div>
@@ -58,13 +58,13 @@
     <section class="section-padding bg-light">
         <div class="container">
             <div class="text-center"><h2>New Arrivals</h2></div>
-            <div class="grid-3" style="margin-top: 40px;">
+            <div class="grid-3">
                 <div class="card">
                     <span class="badge">New Launch</span>
                     <div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400'"></div>
                     <div class="card-info">
                         <h3>Jupiter 110</h3>
-                        <a href="models/jupiter113.html" class="btn btn-outline" style="border-color:var(--primary); color:var(--primary);">View Specs</a>
+                        <a href="models/jupiter113.html" class="btn btn-outline">View Specs</a>
                     </div>
                 </div>
                 <div class="card">
@@ -72,7 +72,7 @@
                     <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400'"></div>
                     <div class="card-info">
                         <h3>Raider 125</h3>
-                        <a href="models/raider.html" class="btn btn-outline" style="border-color:var(--primary); color:var(--primary);">View Specs</a>
+                        <a href="models/raider.html" class="btn btn-outline">View Specs</a>
                     </div>
                 </div>
                 <div class="card">
@@ -80,7 +80,7 @@
                     <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400'"></div>
                     <div class="card-info">
                         <h3>TVS Ronin</h3>
-                        <a href="models/ronin.html" class="btn btn-outline" style="border-color:var(--primary); color:var(--primary);">View Specs</a>
+                        <a href="models/ronin.html" class="btn btn-outline">View Specs</a>
                     </div>
                 </div>
             </div>
@@ -91,24 +91,21 @@
         <div class="container">
             <div class="text-center"><h2>Expert Service</h2></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="service-box" style="text-align: center; padding: 30px; background: white; border: 1px solid #eee;">
+                <div class="card card-info">
                     <div style="font-size: 3rem; margin-bottom: 20px;">🛠️</div>
                     <h3>General Maintenance</h3>
                     <p>Comprehensive checkups by certified TVS experts.</p>
                 </div>
-                <div class="service-box" style="text-align: center; padding: 30px; background: white; border: 1px solid #eee;">
+                <div class="card card-info">
                     <div style="font-size: 3rem; margin-bottom: 20px;">🛢️</div>
                     <h3>TVS Tru4 Oil</h3>
                     <p>Engine oil replacement for smoother rides.</p>
                 </div>
-                <div class="service-box" style="text-align: center; padding: 30px; background: white; border: 1px solid #eee;">
+                <div class="card card-info">
                     <div style="font-size: 3rem; margin-bottom: 20px;">⚙️</div>
                     <h3>Smart Diagnostics</h3>
                     <p>Advanced OBD scanning to detect issues.</p>
                 </div>
-            </div>
-            <div class="text-center" style="margin-top: 40px;">
-                <a href="#contact" class="btn btn-primary">Schedule Appointment</a>
             </div>
         </div>
     </section>
@@ -126,13 +123,12 @@
                                 <option>General Enquiry</option>
                                 <option>Book Test Ride</option>
                                 <option>Book Service</option>
-                                <option>Get Quotation</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-primary full-width">Submit Request</button>
                     </form>
                 </div>
-                <div class="contact-info-wrapper" style="padding: 40px;">
+                <div class="contact-info-wrapper">
                     <h2>Visit Us</h2>
                     <p style="margin-top: 20px; font-size: 1.2rem;">Tirumala TVS Bidarahalli</p>
                     <p>Main Road, Bidarahalli, Bangalore - 560049</p>
@@ -145,8 +141,60 @@
         </div>
     </section>
 
-    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS. All Rights Reserved.</p></div></footer>
+    <footer>
+        <div class="footer-top-bar">
+            <div class="container footer-contact-row">
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">✉</div>
+                    <div class="footer-contact-text">tirumalatvs716@gmail.com</div>
+                </div>
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">📞</div>
+                    <div class="footer-contact-text">+91 99649 46512</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col">
+                    <h4>Quick Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="#contact">Book a Service</a></li>
+                        <li><a href="#contact">Book a Test Drive</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Models</h4>
+                    <ul class="footer-links">
+                        <li><a href="models.html#motorcycles">Motorcycles</a></li>
+                        <li><a href="models.html#scooters">Scooters</a></li>
+                        <li><a href="models.html#electric">Mopeds</a></li>
+                        <li><a href="models.html#electric">Electric</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Showrooms</h4>
+                    <ul class="footer-links">
+                        <li><a href="#contact">Tirumala TVS Bidarahalli</a></li>
+                        <li><a href="#contact">Sales & Service</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="footer-bottom">
+                <div>Copyright © 2025 Tirumala TVS. All rights reserved.</div>
+                <div class="footer-social">FOLLOW US : <span style="font-size:1.2rem;">f</span></div>
+            </div>
+        </div>
+    </footer>
+
     <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
@@ -154,6 +202,16 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
+
+        // Show/Hide Scroll Top Button
+        window.addEventListener('scroll', function() {
+            var scrollBtn = document.querySelector('.scroll-top-btn');
+            if (window.scrollY > 300) {
+                scrollBtn.classList.add('visible');
+            } else {
+                scrollBtn.classList.remove('visible');
+            }
+        });
     </script>
 </body>
 </html>
