--- a/models.html
+++ b/models.html
@@ -22,7 +22,7 @@
         <div class="nav-bar" id="navMenu">
             <div class="container">
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="index.html">Home</a></li>
+                    <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
                     <li class="nav-item"><a href="index.html#about">About</a></li>
                     <li class="nav-item"><a href="#motorcycles">Motorcycles</a></li>
                     <li class="nav-item"><a href="#scooters">Scooters</a></li>
@@ -187,10 +187,59 @@
     </section>
 
     <footer class="footer">
-        <div class="container text-center">
-            <p>&copy; 2025 Tirumala TVS. All Rights Reserved.</p>
+        <div class="footer-top-bar">
+            <div class="container footer-contact-row">
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">✉</div>
+                    <div class="footer-contact-text">tirumalatvs716@gmail.com</div>
+                </div>
+                <div class="footer-contact-item">
+                    <div class="footer-icon-circle">📞</div>
+                    <div class="footer-contact-text">+91 99649 46512</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-main">
+            <div class="container footer-cols">
+                <div class="footer-col">
+                    <h4>Quick Links</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html#about">About Us</a></li>
+                        <li><a href="index.html#contact">Contact Us</a></li>
+                        <li><a href="index.html#contact">Book a Service</a></li>
+                        <li><a href="index.html#contact">Book a Test Drive</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Models</h4>
+                    <ul class="footer-links">
+                        <li><a href="#motorcycles">Motorcycles</a></li>
+                        <li><a href="#scooters">Scooters</a></li>
+                        <li><a href="#electric">Mopeds</a></li>
+                        <li><a href="#electric">Electric</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Showrooms</h4>
+                    <ul class="footer-links">
+                        <li><a href="index.html#contact">Tirumala TVS Bidarahalli</a></li>
+                        <li><a href="index.html#contact">Sales & Service</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="footer-bottom">
+                <div>Copyright © 2025 Tirumala TVS. All rights reserved.</div>
+                <div class="footer-social">FOLLOW US : <span style="font-size:1.2rem;">f</span></div>
+            </div>
         </div>
     </footer>
+
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
@@ -198,6 +247,16 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
+
+        // Show/Hide Scroll Top Button
+        window.addEventListener('scroll', function() {
+            var scrollBtn = document.querySelector('.scroll-top-btn');
+            if (window.scrollY > 300) {
+                scrollBtn.classList.add('visible');
+            } else {
+                scrollBtn.classList.remove('visible');
+            }
+        });
     </script>
 </body>
 </html>
