--- a/index.html
+++ b/index.html
@@ -55,6 +55,39 @@
         </div>
     </div>
 
+    <section id="about" class="welcome-section">
+        <div class="container welcome-grid">
+            <div class="welcome-text">
+                <div class="welcome-badge">👋 WELCOME TO</div>
+                <h2>TVS - Bengaluru Motors</h2>
+                <p>We are committed to being a socially responsible and leading manufacturer of high value for money, environmentally friendly, lifetime personal transportation products under the TVS brand, for customers predominantly in Asian markets and to provide fulfillment and prosperity for employees, dealers, and suppliers.</p>
+            </div>
+            
+            <div class="welcome-icons">
+                <div class="icon-box">
+                    <div class="icon-circle">✓</div>
+                    <h4>Over 50 million Vehicles</h4>
+                    <p>With more than 50 million vehicles on the road, TVS celebrates mobility and progress.</p>
+                </div>
+                <div class="icon-box">
+                    <div class="icon-circle">✓</div>
+                    <h4>A vehicle for everyone</h4>
+                    <p>With the largest portfolio of products from mopeds to premium performance bikes.</p>
+                </div>
+                <div class="icon-box">
+                    <div class="icon-circle">✓</div>
+                    <h4>Presence in 80+ countries</h4>
+                    <p>TVS celebrates mobility and progress. TVSM vehicles bring joy to customers in 80+ countries.</p>
+                </div>
+                <div class="icon-box">
+                    <div class="icon-circle">✓</div>
+                    <h4>Industry Leader TVSM</h4>
+                    <p>TVSM has long been a frontrunner in innovation, delivering industry firsts and advanced technologies.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="section-padding bg-light">
         <div class="container">
             <div class="text-center section-header">
@@ -92,46 +125,46 @@
     <section class="section-padding" style="background-color: #f4f4f4;">
         <div class="container">
             <div class="text-center section-header">
-                <h2 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; font-size: 2.5rem; margin-bottom: 10px;">Happy Riders</h2>
-                <p style="color: #666;">What our customers say about Tirumala TVS.</p>
+                <h2>Happy Riders</h2>
+                <p>What our customers say about Tirumala TVS.</p>
             </div>
             
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"Excellent experience buying my new Apache RTR 160 4V. The sales team was polite, and the delivery process was very smooth. Highly recommend!"</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Arjun Kumar</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">Apache Owner</span>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p>"Excellent experience buying my new Apache RTR 160 4V. The sales team was polite, and the delivery process was very smooth."</p>
+                    <h4>– Arjun Kumar</h4>
+                    <span>Apache Owner</span>
                 </div>
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"I was confused between Jupiter and Ntorq. The staff patiently explained the features of both. Bought the Jupiter 110 and I love it!"</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Priya Sharma</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">Jupiter Owner</span>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p>"I was confused between Jupiter and Ntorq. The staff patiently explained features. Bought the Jupiter 110 and I love it!"</p>
+                    <h4>– Priya Sharma</h4>
+                    <span>Jupiter Owner</span>
                 </div>
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"Best service center in Bidarahalli. My bike had a starting issue that local mechanics couldn't fix. The technicians here fixed it in 2 hours."</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Rahul M.</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">Service Customer</span>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p>"Best service center in Bidarahalli. My bike had a starting issue that local mechanics couldn't fix. They fixed it in 2 hours."</p>
+                    <h4>– Rahul M.</h4>
+                    <span>Service Customer</span>
                 </div>
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"The finance process was super fast. They handled all the paperwork, and I got my TVS Raider delivered within 2 days. Great service."</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Sneha Reddy</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">Raider Owner</span>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p>"The finance process was super fast. They handled all the paperwork, and I got my TVS Raider delivered within 2 days."</p>
+                    <h4>– Sneha Reddy</h4>
+                    <span>Raider Owner</span>
                 </div>
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★★</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"Bought the TVS iQube recently. The team explained the charging and subsidy process clearly. Very happy with my switch to electric."</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Vikram Singh</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">iQube Owner</span>
+                <div class="review-card">
+                    <div class="stars">★★★★★</div>
+                    <p>"Bought the TVS iQube recently. The team explained the charging and subsidy process clearly. Very happy with electric."</p>
+                    <h4>– Vikram Singh</h4>
+                    <span>iQube Owner</span>
                 </div>
-                <div class="card" style="padding: 30px; text-align: left; background: white; box-shadow: 0 5px 15px rgba(0,0,0,0.05);">
-                    <div style="color: #ffc107; font-size: 1.2rem; margin-bottom: 15px;">★★★★☆</div>
-                    <p style="font-style: italic; color: #555; margin-bottom: 20px; line-height: 1.6;">"Genuine spare parts and transparent billing. It's hard to find trustworthy service centers these days, but Tirumala TVS is one of them."</p>
-                    <h4 style="font-family: 'Oswald', sans-serif; color: #1a3b8c; margin-bottom: 5px;">– Anil Gowda</h4>
-                    <span style="font-size: 0.8rem; color: #888; text-transform: uppercase; letter-spacing: 1px;">Regular Customer</span>
+                <div class="review-card">
+                    <div class="stars">★★★★☆</div>
+                    <p>"Genuine spare parts and transparent billing. It's hard to find trustworthy service centers, but Tirumala TVS is one."</p>
+                    <h4>– Anil Gowda</h4>
+                    <span>Regular Customer</span>
                 </div>
             </div>
         </div>
@@ -239,7 +272,7 @@
         <div class="container">
             <div class="footer-bottom">
                 <div>Copyright © 2025 Tirumala TVS. All rights reserved.</div>
-                <div class="footer-social">FOLLOW US : <span style="font-size:1.2rem;">f</span></div>
+                <div class="footer-social">FOLLOW US : <span style="font-size:1.2rem; font-weight:bold;">f</span></div>
             </div>
         </div>
     </footer>
@@ -253,15 +286,9 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
-
-        // Show/Hide Scroll Top Button
         window.addEventListener('scroll', function() {
             var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) {
-                scrollBtn.classList.add('visible');
-            } else {
-                scrollBtn.classList.remove('visible');
-            }
+            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } else { scrollBtn.classList.remove('visible'); }
         });
     </script>
 </body>
