--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="container welcome-grid">
             <div class="welcome-text">
                 <div class="welcome-badge">👋 WELCOME TO</div>
-                <h2>TVS - Bengaluru Motors</h2>
+                <h2>Tirumala TVS</h2>
                 <p>We are committed to being a socially responsible and leading manufacturer of high value for money, environmentally friendly, lifetime personal transportation products under the TVS brand, for customers predominantly in Asian markets and to provide fulfillment and prosperity for employees, dealers, and suppliers.</p>
             </div>
             
