--- a/models.html
+++ b/models.html
@@ -24,10 +24,41 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
                     <li class="nav-item"><a href="index.html#about">About</a></li>
-                    <li class="nav-item"><a href="#motorcycles">Motorcycles</a></li>
-                    <li class="nav-item"><a href="#scooters">Scooters</a></li>
-                    <li class="nav-item"><a href="#electric">Mopeds</a></li>
-                    <li class="nav-item"><a href="#electric">Electric</a></li>
+                    
+                    <li class="nav-item dropdown">
+                        <a href="#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="models/apache160.html">TVS Apache RTR 160 4V</a></li>
+                            <li><a href="models/apache200.html">TVS Apache RTR 200 4V</a></li>
+                            <li><a href="models/raider.html">TVS Raider 125</a></li>
+                            <li><a href="models/ronin.html">TVS Ronin</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a href="#scooters">Scooters <span class="nav-arrow">▼</span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
+                            <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
+                            <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
+                            <li><a href="models/zest110.html">TVS Zest 110</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a href="#electric">Mopeds <span class="nav-arrow">▼</span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="models/xl100.html">TVS XL100</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a href="#electric">Electric <span class="nav-arrow">▼</span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="models/iqube.html">TVS iQube</a></li>
+                        </ul>
+                    </li>
+
                     <li class="nav-item"><a href="index.html#services">Services</a></li>
                 </ul>
             </div>
@@ -55,7 +86,6 @@
             <div id="motorcycles" style="margin-bottom: 80px;">
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">Motorcycles</h2>
                 <div class="grid-3">
-                    
                     <div class="card">
                         <span class="badge">RACING</span>
                         <div class="card-img"><img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache+160'"></div>
@@ -65,7 +95,6 @@
                             <a href="models/apache160.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">PERFORMANCE</span>
                         <div class="card-img"><img src="assets/apache200.jpg" alt="Apache 200" onerror="this.src='https://placehold.co/600x400?text=Apache+200'"></div>
@@ -75,7 +104,6 @@
                             <a href="models/apache200.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">SPORTY</span>
                         <div class="card-img"><img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'"></div>
@@ -85,24 +113,12 @@
                             <a href="models/raider.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
-                    <div class="card">
-                        <span class="badge">PREMIUM</span>
-                        <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
-                        <div class="card-info">
-                            <h3>TVS Ronin</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 1,49,000*</p>
-                            <a href="models/ronin.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-
                 </div>
             </div>
 
             <div id="scooters" style="margin-bottom: 80px;">
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">Scooters</h2>
                 <div class="grid-3">
-
                     <div class="card">
                         <span class="badge">FAMILY</span>
                         <div class="card-img"><img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'"></div>
@@ -112,7 +128,6 @@
                             <a href="models/jupiter113.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">COMFORT</span>
                         <div class="card-img"><img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'"></div>
@@ -122,7 +137,6 @@
                             <a href="models/jupiter125.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">CONNECTED</span>
                         <div class="card-img"><img src="assets/ntorq.jpg" alt="Ntorq 125" onerror="this.src='https://placehold.co/600x400?text=Ntorq+125'"></div>
@@ -132,34 +146,12 @@
                             <a href="models/ntorq125.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
-                    <div class="card">
-                        <span class="badge">POWER</span>
-                        <div class="card-img"><img src="assets/ntorqxp.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'"></div>
-                        <div class="card-info">
-                            <h3>Ntorq Race XP</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 97,000*</p>
-                            <a href="models/ntorq150.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <span class="badge">LIGHT</span>
-                        <div class="card-img"><img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
-                        <div class="card-info">
-                            <h3>TVS Zest 110</h3>
-                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 74,000*</p>
-                            <a href="models/zest110.html" class="btn btn-outline full-width">View Details</a>
-                        </div>
-                    </div>
-
                 </div>
             </div>
 
             <div id="electric" style="margin-bottom: 80px;">
                 <h2 style="font-family: 'Oswald', sans-serif; font-size: 2.5rem; margin-bottom: 30px; border-left: 5px solid var(--accent); padding-left: 15px;">Electric & Mopeds</h2>
                 <div class="grid-3">
-
                     <div class="card">
                         <span class="badge">ELECTRIC</span>
                         <div class="card-img"><img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'"></div>
@@ -169,7 +161,6 @@
                             <a href="models/iqube.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                     <div class="card">
                         <span class="badge">HEAVY DUTY</span>
                         <div class="card-img"><img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'"></div>
@@ -179,67 +170,28 @@
                             <a href="models/xl100.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
-
                 </div>
             </div>
 
         </div>
     </section>
 
-    <footer class="footer">
+    <footer>
         <div class="footer-top-bar">
             <div class="container footer-contact-row">
-                <div class="footer-contact-item">
-                    <div class="footer-icon-circle">✉</div>
-                    <div class="footer-contact-text">tirumalatvs716@gmail.com</div>
-                </div>
-                <div class="footer-contact-item">
-                    <div class="footer-icon-circle">📞</div>
-                    <div class="footer-contact-text">+91 99649 46512</div>
-                </div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">✉</div><div class="footer-contact-text">tirumalatvs716@gmail.com</div></div>
+                <div class="footer-contact-item"><div class="footer-icon-circle">📞</div><div class="footer-contact-text">+91 99649 46512</div></div>
             </div>
         </div>
-
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col">
-                    <h4>Quick Links</h4>
-                    <ul class="footer-links">
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#contact">Contact Us</a></li>
-                        <li><a href="index.html#contact">Book a Service</a></li>
-                        <li><a href="index.html#contact">Book a Test Drive</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Models</h4>
-                    <ul class="footer-links">
-                        <li><a href="#motorcycles">Motorcycles</a></li>
-                        <li><a href="#scooters">Scooters</a></li>
-                        <li><a href="#electric">Mopeds</a></li>
-                        <li><a href="#electric">Electric</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Showrooms</h4>
-                    <ul class="footer-links">
-                        <li><a href="index.html#contact">Tirumala TVS Bidarahalli</a></li>
-                        <li><a href="index.html#contact">Sales & Service</a></li>
-                    </ul>
-                </div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html#about">About Us</a></li><li><a href="index.html#contact">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="#motorcycles">Motorcycles</a></li><li><a href="#scooters">Scooters</a></li></ul></div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="index.html#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
-
-        <div class="container">
-            <div class="footer-bottom">
-                <div>Copyright © 2025 Tirumala TVS. All rights reserved.</div>
-                <div class="footer-social">FOLLOW US : <span style="font-size:1.2rem;">f</span></div>
-            </div>
-        </div>
+        <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
@@ -247,16 +199,6 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
-
-        // Show/Hide Scroll Top Button
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) {
-                scrollBtn.classList.add('visible');
-            } else {
-                scrollBtn.classList.remove('visible');
-            }
-        });
     </script>
 </body>
 </html>
