--- a/index.html
+++ b/index.html
@@ -174,16 +174,13 @@
         </div>
         <div class="footer-main">
             <div class="container footer-cols">
-                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="#about">About Us</a></li><li><a href="#contact">Contact Us</a></li></ul></div>
+                <div class="footer-col"><h4>Quick Links</h4><ul class="footer-links"><li><a href="index.html#about">About Us</a></li><li><a href="index.html#contact">Contact Us</a></li></ul></div>
                 <div class="footer-col"><h4>Models</h4><ul class="footer-links"><li><a href="#motorcycles">Motorcycles</a></li><li><a href="#scooters">Scooters</a></li></ul></div>
-                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
+                <div class="footer-col"><h4>Showrooms</h4><ul class="footer-links"><li><a href="index.html#contact">Tirumala TVS Bidarahalli</a></li></ul></div>
             </div>
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
-
-    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
-    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
