--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a href="index.html" style="color: var(--primary);">Home <span class="nav-arrow">↗</span></a></li>
                     <li class="nav-item"><a href="#about">About</a></li>
                     
-                    <li class="nav-item dropdown">
+                    <li class="nav-item">
                         <a href="models.html#motorcycles">Motorcycles <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/apache160.html">TVS Apache RTR 160 4V</a></li>
@@ -37,7 +37,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item dropdown">
+                    <li class="nav-item">
                         <a href="models.html#scooters">Scooters <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
@@ -49,7 +49,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item dropdown">
+                    <li class="nav-item">
                         <a href="models.html#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/xl100.html">TVS XL100 Heavy Duty</a></li>
@@ -57,7 +57,7 @@
                         </ul>
                     </li>
 
-                    <li class="nav-item dropdown">
+                    <li class="nav-item">
                         <a href="models.html#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/iqube.html">TVS iQube</a></li>
@@ -136,9 +136,9 @@
         <div class="container">
             <div class="text-center section-header"><h2>Happy Riders</h2><p>What our customers say about Tirumala TVS.</p></div>
             <div class="grid-3" style="margin-top: 40px;">
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V."</p><h4>– Arjun Kumar</h4><span>Apache Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff helped me decide."</p><h4>– Priya Sharma</h4><span>Jupiter Owner</span></div>
-                <div class="review-card"><div class="stars">★★★★★</div><p>"Best service center in Bidarahalli. Fast and reliable."</p><h4>– Rahul M.</h4><span>Service Customer</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"Excellent experience buying my new Apache RTR 160 4V. The sales team was polite, and the delivery process was very smooth. Highly recommend!"</p><h4>– Arjun Kumar</h4><span>Apache Owner</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"I was confused between Jupiter and Ntorq. The staff patiently explained the features of both. Bought the Jupiter 110 and I love it!"</p><h4>– Priya Sharma</h4><span>Jupiter Owner</span></div>
+                <div class="review-card"><div class="stars">★★★★★</div><p>"Best service center in Bidarahalli. My bike had a starting issue that local mechanics couldn't fix. The technicians here fixed it in 2 hours."</p><h4>– Rahul M.</h4><span>Service Customer</span></div>
             </div>
         </div>
     </section>
@@ -181,6 +181,9 @@
         </div>
         <div class="container"><div class="footer-bottom"><div>Copyright © 2025 Tirumala TVS. All rights reserved.</div></div></div>
     </footer>
+
+    <a href="https://wa.me/919964946512" class="whatsapp-float" target="_blank">💬</a>
+    <div class="scroll-top-btn" onclick="window.scrollTo(0,0);">▲</div>
 
     <script>
         function toggleMenu() {
