--- a/models.html
+++ b/models.html
@@ -32,6 +32,8 @@
                             <li><a href="models/apache200.html">TVS Apache RTR 200 4V</a></li>
                             <li><a href="models/raider.html">TVS Raider 125</a></li>
                             <li><a href="models/ronin.html">TVS Ronin</a></li>
+                            <li><a href="#contact">TVS Radeon</a></li>
+                            <li><a href="#contact">TVS Sport</a></li>
                         </ul>
                     </li>
 
@@ -41,14 +43,17 @@
                             <li><a href="models/jupiter113.html">TVS Jupiter 110</a></li>
                             <li><a href="models/jupiter125.html">TVS Jupiter 125</a></li>
                             <li><a href="models/ntorq125.html">TVS Ntorq 125</a></li>
+                            <li><a href="models/ntorq150.html">TVS Ntorq Race XP</a></li>
                             <li><a href="models/zest110.html">TVS Zest 110</a></li>
+                            <li><a href="#contact">TVS Scooty Pep+</a></li>
                         </ul>
                     </li>
 
                     <li class="nav-item dropdown">
                         <a href="#electric">Mopeds <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="models/xl100.html">TVS XL100</a></li>
+                            <li><a href="models/xl100.html">TVS XL100 Heavy Duty</a></li>
+                            <li><a href="models/xl100.html">TVS XL100 Comfort</a></li>
                         </ul>
                     </li>
 
@@ -56,6 +61,8 @@
                         <a href="#electric">Electric <span class="nav-arrow">▼</span></a>
                         <ul class="dropdown-menu">
                             <li><a href="models/iqube.html">TVS iQube</a></li>
+                            <li><a href="models/iqube.html">TVS iQube S</a></li>
+                            <li><a href="#contact">TVS X</a></li>
                         </ul>
                     </li>
 
@@ -113,6 +120,15 @@
                             <a href="models/raider.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
+                    <div class="card">
+                        <span class="badge">PREMIUM</span>
+                        <div class="card-img"><img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'"></div>
+                        <div class="card-info">
+                            <h3>TVS Ronin</h3>
+                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 1,49,000*</p>
+                            <a href="models/ronin.html" class="btn btn-outline full-width">View Details</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -144,6 +160,24 @@
                             <h3>Ntorq 125</h3>
                             <p style="color:var(--primary); font-weight:bold;">Starts ₹ 84,000*</p>
                             <a href="models/ntorq125.html" class="btn btn-outline full-width">View Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <span class="badge">POWER</span>
+                        <div class="card-img"><img src="assets/ntorqxp.jpg" alt="Ntorq Race XP" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'"></div>
+                        <div class="card-info">
+                            <h3>Ntorq Race XP</h3>
+                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 97,000*</p>
+                            <a href="models/ntorq150.html" class="btn btn-outline full-width">View Details</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <span class="badge">LIGHT</span>
+                        <div class="card-img"><img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest+110'"></div>
+                        <div class="card-info">
+                            <h3>TVS Zest 110</h3>
+                            <p style="color:var(--primary); font-weight:bold;">Starts ₹ 74,000*</p>
+                            <a href="models/zest110.html" class="btn btn-outline full-width">View Details</a>
                         </div>
                     </div>
                 </div>
@@ -199,10 +233,6 @@
             if(nav.style.display === "block") { nav.style.display = "none"; } 
             else { nav.style.display = "block"; nav.style.position="absolute"; nav.style.top="100%"; nav.style.left="0"; nav.style.width="100%"; nav.style.zIndex="1000"; }
         }
-        window.addEventListener('scroll', function() {
-            var scrollBtn = document.querySelector('.scroll-top-btn');
-            if (window.scrollY > 300) { scrollBtn.classList.add('visible'); } else { scrollBtn.classList.remove('visible'); }
-        });
     </script>
 </body>
 </html>
